# rust-mux

./: .gitignore  AI_README.md  CHANGELOG.md  Cargo.toml  README.md
.gemini/: GEMINI.md
.github/workflows/: ci.yml  claude.yml
.vibecrafted/: GUIDELINES.md  plans  reports
docs/: WIZARD.md
docs/dev/: guidelines.md
src/: config.rs  danger.rs  lib.rs  main.rs  multi_tui.rs  mux_gen.rs  runtime.rs  scan.rs  state.rs  tray.rs  tray_dashboard.rs  wizard.rs
src/runtime/: client.rs  heartbeat.rs  mod.rs  proxy.rs  server.rs  status.rs  tests.rs
src/wizard/: clients.rs  keys.rs  mod.rs  persist.rs  services.rs  types.rs  ui.rs
tools/: install-githooks.sh  install.sh
tools/launchd/: mcp_mux.sample.plist  rmcp_mux.sample.plist
