[package]
name = "rust-mux"
version = "0.1.5"
edition = "2021"
authors = ["Maciej Gad <void@div0.space>", "Monika Szymanska <hello@vetcoders.io>"]
description = "Transport multiplexer for Rust MCP servers — tray, proxy, and runtime supervisor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Loctree/rust-mux"
homepage = "https://github.com/Loctree/rust-mux"
documentation = "https://docs.rs/rust-mux"
readme = "README.md"
keywords = ["mcp", "multiplexer", "proxy", "tray", "supervisor"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rust-mux-proxy"
path = "src/bin/rust_mux_proxy.rs"

[features]
default = ["tray"]
tray = ["tray-icon", "image"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
bytes = "1"
rmcp = "0.9"
crossbeam-channel = "0.5"
tray-icon = { version = "0.21.2", optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
serde_yaml = "0.9"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
ratatui = "0.28"
crossterm = "0.27"

[dev-dependencies]
tempfile = "3"
